--- a/css/main-style.css
+++ b/css/main-style.css
@@ -1,5 +1,3 @@
-
-
 /* header section css start */
 
 @import url(general.css);
@@ -10,9 +8,9 @@
 @import url(header-section-tabs.css);
 @import url(header-section-special-offers.css);
 @import url(header-section-buttons.css);
+@import url(product-card.css);
 
 /* header section css end */
 
 @import url(reviews-and-news.css);
 @import url(speakers-and-video.css);
-
