Product card styles created

--- a/css/general.css
+++ b/css/general.css
@@ -5,10 +5,11 @@
   font-size: var(--bs-body-font-size);
   --additional-font: Heebo, sans-serif;
   box-sizing: border-box;
-  color: #2a2a2a;
+  color: var(--default-color);
   --default-color: #2a2a2a;
   --contacts-links-color: rgb(42, 42, 42);
   --offer-strike-color: #53535373;
+  --in-stock-color: #228b22;
   --nav-pages-color: #474747;
   --button-blue-color: #1e90ff;
   --button-black-color: #000;
@@ -20,6 +21,7 @@
   --header-contacts-light: rgb(242, 242, 242);
   --offer-jbl-color: #eb5112;
   --offer-jbl-strike-color: #797878;
+  --out-stock-color: #b22222;
 
   /* boostrap replacement */
 
