Upgrade responsive for <tabs>

--- a/css/header-section-tabs.css
+++ b/css/header-section-tabs.css
@@ -65,7 +65,7 @@ div .tabs__container p {
     flex-wrap: wrap;
   }
   div .tabs__container {
-    max-width: 444px;
+    max-width: 45%;
   }
 }
 @media (min-width: 991px) {
@@ -79,7 +79,8 @@ div .tabs__container p {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
+    margin: 0 24px;
   }
   div .tabs__container {
     max-width: 332px;
