--- a/css/header-section-tabs.css
+++ b/css/header-section-tabs.css
@@ -20,11 +20,11 @@ div .tabs .tabs__head .tabs__name {
 #featured,
 #sale,
 #new {
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   justify-content: space-around;
   flex-wrap: wrap;
-  margin: auto;
+  margin: auto; */
 }
 #tab__item {
   margin: 5px;
@@ -69,9 +69,8 @@ div .tabs__container p {
   }
 }
 @media (min-width: 991px) {
-  #container-top {
-    max-width: 1200px;
-    margin: auto;
+  #nav-tabContent {
+    margin: 0 24px;
   }
   #featured,
   #sale,
@@ -80,10 +79,9 @@ div .tabs__container p {
     flex-direction: row;
     justify-content: space-around;
     flex-wrap: nowrap;
-    margin: 0 24px;
   }
   div .tabs__container {
-    max-width: 332px;
+    max-width: 24%;
   }
 }
 
