--- a/css/general.css
+++ b/css/general.css
@@ -14,6 +14,7 @@
   --button-blue-color: #1e90ff;
   --button-black-color: #000;
   --button-colorfull-color: #f4a460;
+  --button-after-color: #006400;
   --banner-h-color: #2f2f2f;
   --banner-p-color: #3b3b3b;
   --background-services-color: #faf0e6;
