--- a/css/header-section-special-offers.css
+++ b/css/header-section-special-offers.css
@@ -3,7 +3,7 @@
 
 div .offers-cotainer{
     min-height: 781px;
-    max-width: 332px;
+    max-width: 90%;
     margin: 30px auto 100px auto;
     display: flex;
     flex-direction: column;
