--- a/css/header-section-banner-nav.css
+++ b/css/header-section-banner-nav.css
@@ -9,6 +9,7 @@
   display: flex;
   flex-direction: column;
   max-width: 332px;
+  margin: auto;
 }
 header .banner-bg {
   min-height: 753px;
@@ -60,6 +61,7 @@ section div nav .navigation__burger-button {
 @media (min-width: 991px) {
   .container-top_flex {
     max-width: 944px;
+    margin: auto;
   }
   section div nav .navigation__burger-button {
     display: none;
