Added buttons for carousel and upgraded carousel to for elements in row

--- a/css/header-section-roundabout.css
+++ b/css/header-section-roundabout.css
@@ -1,3 +1,7 @@
+.services {
+  position: relative;
+}
+
 section div .item {
   max-width: 325px;
   margin: 15px auto;
@@ -34,7 +38,36 @@ section div .item__text p {
   color: #6c6c6c;
   line-height: 15px;
 }
-.services__button-next .services__button-prev {
-  font-size: 1.5rem;
-  color: black;
+.services__type {
+  display: flex;
+  justify-content: space-between;
+}
+.services__button-next,
+.services__button-prev {
+  background-color: var(--nav-pages-color);
+  opacity: 0.5;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+}
+.services__button-next {
+  position: absolute;
+  top: 35%;
+  right: -25px;
+}
+.services__button-prev {
+  position: absolute;
+  top: 35%;
+  left: -25px;
+}
+
+.services__button-next span img {
+  width: 25px;
+  position: absolute;
+  left: 1px;
+}
+.services__button-prev span img {
+  width: 25px;
+  position: absolute;
+  right: 1px;
 }
