Added <countdown in js> for special offer

--- a/css/header-section-banner-main.css
+++ b/css/header-section-banner-main.css
@@ -74,7 +74,8 @@ div .links__shop span:hover:active:after {
 }
 
 @media (min-width: 381px) {
-  .container-top {
+  .container-top,
+  .container-section {
     max-width: 431px;
   }
   div .banner__text h1 {
@@ -83,7 +84,8 @@ div .links__shop span:hover:active:after {
 }
 
 @media (min-width: 480px) {
-  .container-top {
+  .container-top,
+  .container-section {
     max-width: 719px;
   }
   div .banner__text h1 {
@@ -92,7 +94,7 @@ div .links__shop span:hover:active:after {
 }
 @media (min-width: 768px) {
   .container-top,
-  .container-top_flex {
+  .container-section {
     max-width: 785px;
   }
 
@@ -107,7 +109,8 @@ div .links__shop span:hover:active:after {
   }
 }
 @media (min-width: 846px) {
-  .container-top {
+  .container-top,
+  .container-section {
     max-width: 926px;
   }
 
@@ -121,8 +124,11 @@ div .links__shop span:hover:active:after {
 }
 
 @media (min-width: 991px) {
-  .container-top {
-    max-width: 974px;
+  .container-top,
+  .container-section {
+    max-width: 1120px;
+    margin: auto;
+    padding: 0 24px;
   }
 
   section div .banner__text {
@@ -141,7 +147,8 @@ div .links__shop span:hover:active:after {
   }
 }
 @media (min-width: 1025px) {
-  .container-top {
+  .container-top,
+  .container-section {
     max-width: 1120px;
   }
 
@@ -162,10 +169,13 @@ div .links__shop span:hover:active:after {
 }
 @media (min-width: 1280px) {
   .container-top,
-  .container-top_flex {
+  .container-section {
     min-width: 1120px;
     max-width: 60%;
     /* max-width: 1500px; */
+  }
+  .container-section {
+    padding: 0;
   }
 
   section div .banner__text {
