--- a/css/header-section-roundabout.css
+++ b/css/header-section-roundabout.css
@@ -1,5 +1,3 @@
-section .services container {
-}
 section.first-section {
   margin-top: 50px;
 }
@@ -61,6 +59,24 @@ section div .item__text p {
   top: 35%;
   left: 25px;
 }
+ul.services__indicators {
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  width: 400px;
+}
+ul.services__indicators li {
+  list-style: none;
+  width: 10px;
+  height: 10px;
+  background: var(--button-black-color);
+  opacity: 0.5;
+  border-radius: 50%;
+}
+ul.services__indicators li.active {
+  opacity: 1;
+}
+
 @media (min-width: 1280px) {
   .services__button-next span img {
     right: -15px;
