--- a/css/general.css
+++ b/css/general.css
@@ -30,5 +30,5 @@
   font-family: var(--bs-body-font-family);
   --bs-body-font-size: 17px;
   font-size: var(--bs-body-font-size);
-  --bs-light-rgb: #fff;
+  --bs-blue: #474747;
 }
