--- a/css/header-section-banner-nav.css
+++ b/css/header-section-banner-nav.css
@@ -34,6 +34,27 @@ section div nav .navigation-logo img {
   body.lock {
     overflow: hidden;
   }
+  section div nav .navigation-logo {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 0;
+    z-index: 10;
+  }
+  section div nav .navigation-burger {
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 20px;
+    padding: 12px;
+    cursor: pointer;
+    z-index: 5;
+  }
   section div nav .navigation-burger span,
   section div nav .navigation-burger::before,
   section div nav .navigation-burger::after {
@@ -67,28 +88,6 @@ section div nav .navigation-logo img {
   section div nav .navigation-burger.active::after {
     bottom: 40%;
     transform: rotate(45deg);
-  }
-
-  section div nav .navigation-logo {
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 30px 0;
-    z-index: 10;
-  }
-  section div nav .navigation-burger {
-    display: block;
-    position: relative;
-    width: 30px;
-    height: 20px;
-    padding: 12px;
-    cursor: pointer;
-    z-index: 5;
   }
   header section div.container-section {
     position: relative;
@@ -129,7 +128,6 @@ section div nav .navigation-logo img {
     position: relative;
     font-size: 0.92rem;
     font-weight: 700;
-    color: var(--bs-blue);
     line-height: 3rem;
     display: flex;
     flex-direction: column;
@@ -138,6 +136,27 @@ section div nav .navigation-logo img {
     height: auto;
     z-index: 10;
     padding-top: 100px;
+  }
+  body
+    > header
+    > section
+    > div
+    > nav
+    > div.navigation-wrapper.active
+    > div.navigation-pages
+    > a {
+    color: var(--nav-pages-color);
+    opacity: 0.8;
+  }
+  body
+    > header
+    > section
+    > div
+    > nav
+    > div.navigation-wrapper.active
+    > div.navigation-pages
+    > a:hover {
+    color: var(--button-black-color);
   }
 
   section div nav .navigation-pages a:hover {
