--- a/css/main-style.css
+++ b/css/main-style.css
@@ -9,6 +9,7 @@
 @import url(header-section-special-offers.css);
 @import url(header-section-buttons.css);
 @import url(product-card.css);
+@import url(headphones-section.css);
 
 /* header section css end */
 
