--- a/css/reviews-and-news.css
+++ b/css/reviews-and-news.css
@@ -384,6 +384,12 @@ font-size: 14px;
 .brand-logos{
 margin-top: 30px;
 }
-
-
+.newproducts_container{
+  display: flex;
+  flex-direction: column;
+}
+.popular-article {
+  padding: 100px 0;
+  
+}
 
