Added <modal window for cart>

--- a/css/general.css
+++ b/css/general.css
@@ -18,6 +18,7 @@
   --banner-h-color: #2f2f2f;
   --banner-p-color: #3b3b3b;
   --background-services-color: #faf0e6;
+  --input-color: #f3e8e8f1;
   --light-text-color: #fff;
   --header-contacts-light: rgb(242, 242, 242);
   --offer-jbl-color: #eb5112;
