--- a/css/main-style.css
+++ b/css/main-style.css
@@ -10,6 +10,7 @@
 @import url(header-section-buttons.css);
 @import url(product-card.css);
 @import url(headphones-section.css);
+@import url(header-section-modal-cart.css);
 
 /* header section css end */
 
